# microservices

./: docker-compose.yml
services/users/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
services/users/app/: __init__.py  config.py
services/users/app/api/: __init__.py  exceptions.py  models.py
services/users/app/api/utils/: __init__.py  _user.py
services/users/app/db/: Dockerfile
services/users/app/tests/: base.py  test_config.py  test_users.py
