[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["KestutisKazlauskas <kstutisk4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
Flask-RESTful = "^0.3.7"
Flask-SQLAlchemy = "^2.4"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==0.12.17"]
build-backend = "poetry.masonry.api"
